@@ -11,10 +11,8 @@ error_log
 ^dist\.ini
 ^weaver\.ini
 ^t/httpd.loc
-^t/lib/Sample/AuthCookieHandler.pm$
 
 # Apache::Test generated files
-^t/lib/Sample/AuthCookieHandler.pm$
 ^t/conf/extra.conf$
 ^t/conf/httpd.conf$
 ^t/conf/mime.types$
